--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
   height: 100vh;
+  background-color: var(--dark-grey);
 }
 
 code {
