--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ body {
   background-color: var(--dark-grey);
 }
 
+#root{
+  width: 100%;
+  height:100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
