create nav menu

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
   --dark-grey : #202020;
-  --white : #dfdfdf;
+  --white : #efefef;
 }
 
 html{
@@ -22,7 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
   height: 100vh;
-  background-color: var(--dark-grey);
+  background-color: var(--white);
 }
 
 #root{
