--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -1,6 +1,6 @@
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 50%;
     margin: 0 auto;
