--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -6,6 +6,14 @@
     margin: 0 auto;
 }
 
+.menu__item:first-child{
+    margin-right: 2rem;
+}
+
+.menu__item:last-child{
+    margin-left: 2rem;
+}
+
 .menu__logo{
     height: 88px;
 }
