--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -8,7 +8,7 @@
 
 .menu__item{
     color:#363636;
-    text-shadow: 0 0 6px #369200;
+    text-shadow: 0px 0px 2px #369200;
 }
 
 .menu__item:first-child{
