--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -10,6 +10,7 @@
     color:#363636;
     text-shadow: 0px 0px 4px #369200;
     font-size: 2rem;
+    font-weight: 600;
 }
 
 .menu__item:first-child{
