creation de la navbar

--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -7,7 +7,7 @@
 }
 
 .menu__item{
-    color:#ececec;
+    color:#bebebe;
     text-shadow: 0px 0px 4px #369200;
     font-size: 1.25rem;
     font-weight: 600;
