--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -7,7 +7,7 @@
 }
 
 .menu__item{
-    color:#bebebe;
+    color:#d4d4d4;
     text-shadow: 0px 0px 4px #369200;
     font-size: 1.25rem;
     font-weight: 600;
