--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,17 @@
 :root{
   --dark-grey : #202020;
-  --white : #efefef;
+  --white : #dfdfdf;
 }
 
 html{
   color:var(--white);
 }
 
-html,body,div,p,h1,h2,h3,h4,ul,li{
+html,body,div,p,h1,h2,h3,h4,ul,li,a{
   margin:0;
   padding: 0;
   border:0;
   box-sizing: border-box; 
-  
 }
 
 body {
@@ -28,6 +27,10 @@ body {
 
 li{
   list-style-type: none;
+}
+
+a {
+  text-decoration:none;
 }
 
 #root{
