--- a/src/components/loginForm.css
+++ b/src/components/loginForm.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     margin: 2rem auto 0 auto;
-    width: 400px;
+    width:70%;
+    max-width: 400px;
     border-radius: 4px;
     padding: 2rem 2rem;
     -webkit-border-radius: 4px;
@@ -18,6 +19,7 @@
 }
 
 .form--title{
+    font-size:115%;
     color: #454545;
     margin-bottom:1rem;
 }
