--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,31 @@ code {
 .btn-success{
   background-color:#89ec2c;
 }
+
+.message {
+  width: auto;
+  padding:1rem;
+  color: #444444;
+  margin-top: 1.75rem;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  box-shadow: 0 0 20px -5px #c7c7c7;
+}
+
+.info{
+  background-color:rgba(255, 255, 0, 0.582);
+  border: 2px solid yellow;
+}
+
+.success{
+  background-color:rgba(80, 231, 42, 0.582);
+  border: 2px solid rgba(0, 128, 0, 0.137);
+}
+
+.danger{
+  background-color:rgba(231, 48, 42, 0.582);
+  border: 2px solid rgba(231, 48, 42, 0.151);
+}
