--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,18 @@ input{
   -o-border-radius:3px;
 }
 
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus{
+  border:2px solid rgba(47, 168, 248, 0.445);
+  outline: none;
+  transition: 45ms;
+  -webkit-transition: 45ms;
+  -moz-transition: 45ms;
+  -ms-transition: 45ms;
+  -o-transition: 45ms;
+}
+
 #root{
   width: 100%;
   height:100%;
