--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,9 @@ input[type=email]:focus{
 }
 
 #root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height:100%;
 }
@@ -83,7 +86,7 @@ code {
   width:100%;
 }
 
-.btn{
+.btn,.FBButton{
   padding:.75rem 0;
   border-radius: 3px;
   -webkit-border-radius: 3px;
