--- a/src/components/navmenu.css
+++ b/src/components/navmenu.css
@@ -26,7 +26,7 @@
 }
 
 .menu__logo{
-    height: 12vw;
+    height: 14vw;
 }
 
 .menu__connect{
@@ -37,9 +37,15 @@
     color: var(--white);
 }
 
-@media screen and (min-width: 640px){
+@media screen and (min-width: 480px){
     .menu__logo{
         height: 10vw;
+    }
+}
+
+@media screen and (min-width: 640px){
+    .menu__logo{
+        height: 8vw;
     }
 }
 
