--- a/src/components/SocialButton.css
+++ b/src/components/SocialButton.css
@@ -1,12 +1,15 @@
 .btn__social{
-    width:100%;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    width:12vw;
+    height:12vw;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
     font-size: calc(.27548vw + 12.71074px);
-
     font-family: Helvetica,sans-serif;
     font-weight: 500;
     -webkit-font-smoothing: antialiased;
@@ -17,4 +20,69 @@
     text-decoration: none;
     text-transform: uppercase;
     transition: background-color .3s,border-color .3s;
+    padding:0;
+}
+
+
+.icons{
+    position:relative;
+    font-size:8vw;
+}
+
+.twitter__icon,.google__icon,.facebook__icon{
+    top:2px;
+    
+}
+
+.google__icon{
+    left:2px
+}
+
+.facebook__icon,.twitter__icon{
+    font-size: 6vw;
+}
+
+@media screen and (min-width: 640px){
+    .icons{
+        font-size: 6vw;
+    }
+
+    .btn__social{
+        width:8vw;
+        height:8vw;
+    }
+
+    .facebook__icon,.twitter__icon{
+        font-size:4vw;
+    }
+}
+
+@media screen and (min-width: 920px){
+    .icons{
+        font-size: 4vw;
+    }
+
+    .btn__social{
+        width:6vw;
+        height:6vw;
+    }
+
+    .facebook__icon,.twitter__icon{
+        font-size:2vw;
+    }
+}
+
+@media screen and (min-width: 1240px){
+    .icons{
+        font-size: 2vw;
+    }
+
+    .btn__social{
+        width:4vw;
+        height:4vw;
+    }
+
+    .facebook__icon,.twitter__icon{
+        font-size:1.75vw;
+    }
 }
