--- a/src/components/SocialButton.css
+++ b/src/components/SocialButton.css
@@ -86,3 +86,19 @@
         font-size:1.75vw;
     }
 }
+
+
+@media screen and (min-width: 1620px){
+    .icons{
+        font-size: 1.75vw;
+    }
+
+    .btn__social{
+        width:3vw;
+        height:3vw;
+    }
+
+    .facebook__icon,.twitter__icon{
+        font-size:1.5vw;
+    }
+}
