--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 :root{
+  --black : #101010;
   --dark-grey : #202020;
+  --grey: #404040;
+  --light-grey: #606060;
   --white : #dfdfdf;
 }
 
@@ -23,6 +26,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: var(--white);
+  overflow: hidden;
 }
 
 li{
@@ -87,18 +91,21 @@ code {
 }
 
 .btn{
-  margin-bottom: 1.5rem;
-  padding:1.75vw 0;
+  margin:0 auto 1.5rem auto;
+  padding:4vw 0;
   font-family: Helvetica,sans-serif;
   font-size:4vw;
+  font-weight: 600;
+  letter-spacing: 1px;
   color:rgb(46, 46, 46);
-  width: 99%;
+  width: 80%;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   box-shadow: 0 0 20px -5px #8f8f8f;
+  text-transform:uppercase;
 }
 
 .btn-success{
@@ -133,6 +140,8 @@ code {
   border: 2px solid rgba(231, 48, 42, 0.151);
 }
 
+/* Media queries */
+
 @media screen and (min-width: 480px){
 
 }
@@ -157,3 +166,12 @@ code {
     font-size:1.25vw
   }
 }
+
+@media screen and (min-width: 1620px){
+  .btn{
+    padding:.5vw 0;
+    font-size:1vw
+  }
+}
+
+
