--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,6 +1,13 @@
 .navbar{
     width: 100%;
     height:100%;
+    width: 100%;
+    background-color: var(--dark-grey);
+    transition: all 300ms ease;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -ms-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
 }
 
 .menu {
@@ -39,6 +46,9 @@
 
 
 .menu__link{
+    display: flex;
+    align-items: center;
+    border: none;
     cursor:pointer;
 }
 
@@ -58,10 +68,11 @@
 
 .menu__icon{
     color:#dfdfdf;
-    font-size: 9vw;
+    font-size: 7vw;
     -webkit-filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
     filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
 }
+
 
 
 @media screen and (min-width: 480px){
