--- a/src/layouts/Footer.css
+++ b/src/layouts/Footer.css
@@ -1,11 +1,11 @@
 .footer{
     display:flex;
     align-items: center;
-    position :relative;
+    position:relative;
     height: 8vh;
-    transition: height 350s ease;
-    -webkit-transition: height 350s ease;
-    -moz-transition: height 350s ease;
-    -ms-transition: height 350s ease;
-    -o-transition: height 350s ease;
+    transition: height 800ms ease;
+    -webkit-transition: height 800ms ease;
+    -moz-transition: height 800ms ease;
+    -ms-transition: height 800ms ease;
+    -o-transition: height 800ms ease;
 }
