--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
-  min-height: 100vh;
+
   min-height: -webkit-fill-available;
   background-color: var(--white);
   overflow: hidden;
@@ -67,7 +67,7 @@ input[type=email]:focus{
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height:100%;
+  height:100vh;
 }
 
 code {
