--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,14 @@ body {
   overflow: hidden;
 }
 
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height:calc(100vh - 45px);
+}
+
 li{
   list-style-type: none;
 }
@@ -60,14 +68,6 @@ input[type=email]:focus{
   -moz-transition: 45ms;
   -ms-transition: 45ms;
   -o-transition: 45ms;
-}
-
-#root{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height:100vh;
 }
 
 code {
