--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height:calc(100vh - 52px);
+  height:667px;
 }
 
 li{
