--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height:667px;
+  height:var(--inner-height);
 }
 
 li{
