--- a/src/components/DecksList.css
+++ b/src/components/DecksList.css
@@ -6,8 +6,9 @@
 
 .deck__list-layer{
     position:fixed;
-    top:100%;
+    top:calc(78 * var(--vh));
     width:100%;
     height: 10%;
-    background-color:var(--white)
+    background-image:linear-gradient(transparent, var(--white),var(--white));
+    z-index:10;
 }
