--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -1,30 +1,53 @@
 .deck__block{
+    display: flex;
     width:90%;
     height: calc(16 * var(--vh));
     background-color:var(--dark-grey);
     margin:.5rem auto;
+    padding:.5rem;
+    border-radius:8px;
+    -webkit-border-radius:8px;
+    -moz-border-radius:8px;
+    -ms-border-radius:8px;
+    -o-border-radius:8px;
 }
 
-.deck__block:focus{
-    transform: scale(2);
-    -webkit-transform: scale(2);
-    -moz-transform: scale(2);
-    -ms-transform: scale(2);
-    -o-transform: scale(2);
+
+.deck__inner--left{
+    width: 65%;
+    margin-right:1.5rem;
 }
 
-.deck__inner__left{
+.deck__inner--right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding:0 0 0 0.75rem;
+    width:30%;
+}
+.inner__right--text{
+    display:flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.deck__ec--title{
+    font-size: 1.25rem;
 
 }
 
-.deck__inner__right{
-
+.deck__ec--value{
+    font-size: 1.25rem;
 }
 
-.deck__title{
-
+.inner__right--actions{
+    display: flex;
+    justify-content: space-between;
+    height:30%;
+    width: 100%;
 }
 
-.deck__infos{
-
+.action__delete,.action__modify{
+    font-size:1.25rem;
+    color:var(--white)
 }
