--- a/src/layouts/Main.css
+++ b/src/layouts/Main.css
@@ -3,5 +3,5 @@ main {
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    margin-top: 4rem;
+    margin-top: calc(5 * var(--vh));
 }
