--- a/src/index.css
+++ b/src/index.css
@@ -88,10 +88,7 @@ code {
   align-items: center;
   margin: 0 auto;
   width:100%;
-  height:calc(70 * var(--vh));
   padding: 2rem 1rem;
-  overflow-y:auto;
-  -webkit-overflow-scrolling: auto;
 }
 
 .form--input{
@@ -141,11 +138,19 @@ code {
   display: none;
 }
 
-.page-container{
-  padding:3rem 0;
-  height:calc(100vh - 98px);
-  width:100%;
+.page{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
+
+.page--container{
+  position: relative;
+  height: calc(65 * var(--vh));
+  overflow-y: scroll;
+}
+
 
 .btn{
   margin:0 auto 1.5rem auto;
