--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,38 @@ code {
   color:var(--white);
 }
 
+.form--section{
+  display: flex;
+  flex-direction:column;
+  width: 80%;
+}
+
+.form--section:last-of-type{
+  margin-bottom:calc(2 * var(--vh));
+}
+
+.form__section--title{
+  margin-bottom: .75rem;
+  font-size: 2.75vh;
+  color:var(--dark-grey);
+}
+
+.form--separator{
+  line-height:0.1rem;
+  background-color: #bbbbbb;
+  text-align: center;
+  width:80%;
+  margin:2rem auto;
+}
+
+.form--separator-text{
+  position:relative;
+  top: -3px;
+  padding:0 20px;
+  color: var(--dark-grey);
+  background-color: var(--white);
+}
+
 .title{
   text-align:center;
   color:var(--dark-grey);
@@ -153,7 +185,7 @@ code {
 
 
 .btn{
-  margin:0 auto 1.5rem auto;
+  margin:.5rem auto;
   padding:4vw 0;
   font-family: Helvetica,sans-serif;
   font-size:4vw;
