--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,8 +2,15 @@
     width:100%;
     height:100%;
     margin-right: -10px;
+
+
 }
 
 .card__image{
     width: 100%;
+    border-radius:4px;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    -ms-border-radius:4px;
+    -o-border-radius:4px;
 }
