--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -2,7 +2,7 @@
     display:grid;
     background-color: black;
     width:100%;
-    height: 90vh;
+    height: calc(85 * var(--vh));
     grid-template-columns: repeat(2,1fr);
     overflow-y:scroll;
     gap:12px 16px;
