--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,8 +1,8 @@
 .card__list{
     display:grid;
-    background-color: black;
+    background-color: var(--white);
     width:100%;
-    height: calc(85 * var(--vh));
+    height: calc(65 * var(--vh));
     grid-template-columns: repeat(3,1fr);
     overflow-y:scroll;
     gap:12px 16px;
