starting gamers page

--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,46 @@ code {
   -o-transition: height 1s ease;
 }
 
+/* Layouts */
+
+.layout__3--col{
+    display:grid;
+    background-color: var(--white);
+    width:100%;
+    height: calc(65 * var(--vh));
+    grid-template-columns: repeat(3,1fr);
+    overflow-y:scroll;
+    gap:12px 16px;
+    margin:0 auto;
+    justify-content: center;
+    align-items: center;
+    padding:1rem 1rem;
+}
+
+.layout__3--col::after{
+    content:"";
+    height:.1rem;
+}
+
+.layout__4--col{
+  display:grid;
+  background-color: var(--white);
+  width:100%;
+  height: calc(65 * var(--vh));
+  grid-template-columns: repeat(4,1fr);
+  overflow-y:scroll;
+  gap:12px 16px;
+  margin:0 auto;
+  justify-content: center;
+  align-items: center;
+  padding:1rem 1rem;
+}
+
+.layout__4--col::after{
+  content:"";
+  height:.1rem;
+}
+
 /* Media queries */
 
 @media screen and (min-width: 480px){
