--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,7 +1,13 @@
 .user__block{
     width:100%;
     height:100%;
-    background-color: var(--dark-grey);
     text-align: center;
+    padding:.25rem 0;
+    color: var(--dark-grey);
+    border:1px solid var(--dark-grey)
+}
+
+.user__default--icon{
+    font-size: 12vh;
 }
 
