--- a/src/index.css
+++ b/src/index.css
@@ -264,31 +264,11 @@ code {
 
 /* Layouts */
 
-.layout__3--col{
-    display:grid;
-    background-color: var(--white);
-    width:100%;
-    height: calc(65 * var(--vh));
-    grid-template-columns: repeat(3,1fr);
-    overflow-y:scroll;
-    gap:12px 16px;
-    margin:0 auto;
-    justify-content: center;
-    align-items: center;
-    padding:1rem 1rem;
-}
-
-.layout__3--col::after{
-    content:"";
-    height:.1rem;
-}
-
-.layout__4--col{
+.layout{
   display:grid;
   background-color: var(--white);
   width:100%;
   height: calc(65 * var(--vh));
-  grid-template-columns: repeat(4,1fr);
   overflow-y:scroll;
   gap:12px 16px;
   margin:0 auto;
@@ -297,9 +277,23 @@ code {
   padding:1rem 1rem;
 }
 
-.layout__4--col::after{
+.layout::after{
   content:"";
   height:.1rem;
+}
+
+.layout__2{
+    grid-template-columns: repeat(2,1fr);
+}
+
+
+.layout__3{
+    grid-template-columns: repeat(3,1fr);
+}
+
+
+.layout__4{
+  grid-template-columns: repeat(4,1fr);
 }
 
 /* Media queries */
