--- a/src/index.css
+++ b/src/index.css
@@ -77,11 +77,19 @@ code {
     monospace;
 }
 
-
-/* Utilities */
-.row{
+.page{
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
+
+.page--container{
+  position: relative;
+  height: calc(65 * var(--vh));
+  overflow-y: scroll;
+}
+
 .form{
   display: flex;
   flex-direction: column;
@@ -158,6 +166,45 @@ code {
   background-color: var(--white);
 }
 
+.search__bar{
+  position: relative;
+  bottom:1vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding:1rem;
+  color:var(--grey);
+}
+
+.search__bar--input{
+  margin: 0;
+  padding: .5rem 8vh .5rem .5rem;
+  font-size: 1rem;
+  width:100%;
+  border: 1px solid var(--dark-white);
+  background-color: transparent;
+  border-radius:4px;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  -ms-border-radius:4px;
+  -o-border-radius:4px;
+}
+
+.search__bar--icon{
+  position: absolute;
+  right: 1.5rem;
+  font-size:5.5vh;
+  z-index:1;
+  cursor: pointer;
+}
+
+/* Utilities */
+
+.row{
+  display: flex;
+}
+
+
 .title{
   text-align:center;
   color:var(--dark-grey);
@@ -170,20 +217,6 @@ code {
 .d-none{
   display: none;
 }
-
-.page{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-}
-
-.page--container{
-  position: relative;
-  height: calc(65 * var(--vh));
-  overflow-y: scroll;
-}
-
 
 .btn{
   margin:.5rem auto;
@@ -263,7 +296,6 @@ code {
 }
 
 /* Layouts */
-
 .layout{
   display:grid;
   background-color: var(--white);
@@ -331,7 +363,6 @@ code {
 }
 
 /* Transitions Effects */
-
 .fade-out{
   opacity: 0;
   transition: opacity 1s ease;
