--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ code {
 .search__bar--input{
   margin: 0;
   padding: .75rem 8vh .75rem .75rem;
-  font-size: 1rem;
+  font-size: 3vh;
   width:100%;
   border: 1px solid var(--dark-white);
   background-color: transparent;
@@ -188,6 +188,7 @@ code {
   -moz-border-radius:4px;
   -ms-border-radius:4px;
   -o-border-radius:4px;
+  text-align: center;
 }
 
 .search__bar--icon{
