--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -1,8 +1,8 @@
 .deck__block{
     display: flex;
-    width:90%;
+    width:100%;
     background-color:var(--dark-grey);
-    margin:.5rem auto;
+    margin:0 auto;
     padding:.5rem;
     border-radius:8px;
     -webkit-border-radius:8px;
