--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .card__container{
+    position:relative;
     width:100%;
     height:100%;
-
 }
 
 .card__image{
@@ -11,4 +11,20 @@
     -moz-border-radius:4px;
     -ms-border-radius:4px;
     -o-border-radius:4px;
+}
+
+.card__checkbox{
+    position: absolute;
+    right: calc(1 * var(--vh));
+    top: calc(1 * var(--vh));
+    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+    -moz-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    -o-transform: scale(1.15);
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
