--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,24 @@ code {
   display: flex;
 }
 
+.mb-1{
+  margin-bottom: 1vh !important;
+}
+.mb-2{
+  margin-bottom: 2vh !important;
+}
+.mb-3{
+  margin-bottom: 3vh !important;
+}
+.mb-4{
+  margin-bottom: 4vh !important;
+}
+.mb-5{
+  margin-bottom: 5vh !important;
+}
+.mb-6{
+  margin-bottom: 6vh !important;
+}
 
 .title{
   text-align:center;
@@ -327,7 +345,6 @@ code {
   justify-content: center;
   align-items: center;
   padding:1rem 1rem;
-  margin-bottom:6vh;
 }
 
 .layout::after{
