--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,17 @@ a {
   text-decoration:none;
 }
 
+/*Components*/
+
+.header{
+  text-align: center;
+  color: var(--grey);
+  margin-top:4vh;
+}
+.header h1 {
+  font-size:4vh;
+}
+
 button:hover{
   cursor:pointer;
 }
@@ -85,7 +96,7 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 90%;
 }
 
 .page--container{
@@ -338,7 +349,7 @@ code {
   display:grid;
   background-color: var(--white);
   width:100%;
-  height: calc(65 * var(--vh));
+  height: calc(60 * var(--vh));
   overflow-y:scroll;
   gap:12px 16px;
   margin:0 auto;
