--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-width:25%;
+    width:30%;
 }
 .inner__right--text{
     display:flex;
