--- a/src/index.css
+++ b/src/index.css
@@ -232,6 +232,76 @@ code {
   color:var(--white)
 }
 
+.dropdown__menu{
+  color:var(--white);
+  width:80%;
+  margin: 0 auto;
+}
+
+.dropdown__draw{
+  background-color:#151515;
+  font-size: 4vh;
+  margin-bottom:1rem;
+}
+
+
+.dropdown__link{
+  display: block;
+  padding-top:1rem;
+  margin-bottom:1rem;
+  height: 50px;
+  color: var(--white);
+  font-size: 4vh;
+  margin-left:1rem;
+}
+
+.dropdown__body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height:0;
+  height:0;
+  overflow: hidden;
+  transition:min-height 1s ease;
+  -webkit-transition:min-height 1s ease;
+  -moz-transition:min-height 1s ease;
+  -ms-transition:min-height 1s ease;
+  -o-transition:min-height 1s ease;
+  background-color: #404040;
+}
+
+.dropdown__content{
+  width: 100%;
+  padding:0 1rem;
+  margin-bottom:.75rem;
+  font-size: 2vh;
+}
+
+.dropdown__cta--box{
+  display: flex;
+  justify-content: space-between;
+  padding:0 1rem;
+  width:100%;
+}
+
+.dropdown__icon{
+  cursor: pointer;
+}
+
+svg.dropdown__icon path{
+  stroke:var(--white);
+}
+
+.dropdown__draw:target .dropdown__body{
+  min-height: 13vh;
+  transition:min-height 1s ease;
+  -webkit-transition:min-height 1s ease;
+  -moz-transition:min-height 1s ease;
+  -ms-transition:min-height 1s ease;
+  -o-transition:min-height 1s ease;
+  padding:.25rem;
+}
+
 /* Utilities */
 
 .row{
