--- a/src/index.css
+++ b/src/index.css
@@ -293,7 +293,7 @@ svg.dropdown__icon path{
 }
 
 .dropdown__draw:target .dropdown__body{
-  min-height: 13vh;
+  min-height: calc(13 * var(--vh));
   transition:min-height 1s ease;
   -webkit-transition:min-height 1s ease;
   -moz-transition:min-height 1s ease;
