--- a/src/index.css
+++ b/src/index.css
@@ -251,7 +251,7 @@ code {
   margin-bottom:.75rem;
   height: 50px;
   color: var(--white);
-  font-size: 3.5vh;
+  font-size: calc(3.5 * var(--vh));
   margin-left:1rem;
 }
 
