--- a/src/components/SocialButton.css
+++ b/src/components/SocialButton.css
@@ -1,41 +1,30 @@
 .btn__social{
     display: flex;
-    justify-content:center;
+    justify-content:flex-start;
     align-items:center;
-    width:12vw;
+    width:100%;
     height:12vw;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
     font-size: calc(.27548vw + 12.71074px);
     font-family: Helvetica,sans-serif;
     font-weight: 500;
     -webkit-font-smoothing: antialiased;
     color: #fff;
     cursor: pointer;
-    display: inline-block;
     font-size: calc(.27548vw + 12.71074px);
     text-decoration: none;
     text-transform: uppercase;
     transition: background-color .3s,border-color .3s;
-    padding:0;
+    padding:0 1rem;
 }
 
-
-.icons{
-    position:relative;
-    font-size:8vw;
+.btn__social--text{
+    width:100%;
+    font-weight: 600;
+    font-size: 4vw;
 }
 
-.twitter__icon,.google__icon,.facebook__icon{
-    top:1px;
-    left:1px;
-}
-
-.facebook__icon,.twitter__icon{
-    font-size: 6vw;
+.google__icon + .btn__social--text{
+    color: var(--grey)
 }
 
 @media screen and (min-width: 640px){
