--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -4,7 +4,7 @@
     width:100%;
     background-color:var(--dark-grey);
     margin:0 auto;
-    padding:.5rem;
+    padding:.5rem 1.5rem;
     min-height: 100px;
     border-radius:8px;
     -webkit-border-radius:8px;
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width:30%;
+    width:25%;
 }
 .inner__right--text{
     display:flex;
