--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 40%;
+    min-height: 40%;
 }
 
 .inner__right--actions{
