add good input color to add deck form

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --grey: #404040;
   --light-grey: #606060;
   --dark-white : #afafaf;
-  --white : #dfdfdf;
+  --white : #efefef;
   --inner-height: 100vh;
   --vh: 100;
 }
