--- a/src/index.css
+++ b/src/index.css
@@ -385,7 +385,8 @@ svg.dropdown__icon path{
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
   -o-border-radius: 2px;
-  background-color:var(--done)
+  background-color:var(--done);  
+  box-shadow: 0 0 20px -5px #8f8f8f;
 }
 
 .message__flash-error{
