--- a/src/index.css
+++ b/src/index.css
@@ -399,21 +399,21 @@ svg.dropdown__icon path{
 .message__flash-done{
   opacity:1;
   background-color: var(--done);
-  transition: opacity .75s ease,background-color 1s ease;
-  -webkit-transition: opacity .75s ease,background-color 1s ease;
-  -moz-transition: opacity .75s ease,background-color 1s ease;
-  -ms-transition: opacity .75s ease,background-color 1s ease;
-  -o-transition: opacity .75s ease,background-color 1s ease;
+  transition: opacity .75s ease,background-color .75s ease;
+  -webkit-transition: opacity .75s ease,background-color .75s ease;
+  -moz-transition: opacity .75s ease,background-color .75s ease;
+  -ms-transition: opacity .75s ease,background-color .75s ease;
+  -o-transition: opacity .75s ease,background-color .75s ease;
 }
 
 .message__flash-error{
   opacity:1;
   background-color: var(--error);
-  transition: opacity .75s ease,background-color 1s ease;
-  -webkit-transition: opacity .75s ease,background-color 1s ease;
-  -moz-transition: opacity .75s ease,background-color 1s ease;
-  -ms-transition: opacity .75s ease,background-color 1s ease;
-  -o-transition: opacity .75s ease,background-color 1s ease;
+  transition: opacity .75s ease,background-color .75s ease;
+  -webkit-transition: opacity .75s ease,background-color .75s ease;
+  -moz-transition: opacity .75s ease,background-color .75s ease;
+  -ms-transition: opacity .75s ease,background-color .75s ease;
+  -o-transition: opacity .75s ease,background-color .75s ease;
 }
 
 .title{
