add pagination to ajax call

--- a/src/index.css
+++ b/src/index.css
@@ -539,6 +539,7 @@ svg.dropdown__icon path{
 .layout__1{
   display:flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 .layout__2{
