--- a/src/index.css
+++ b/src/index.css
@@ -376,6 +376,9 @@ svg.dropdown__icon path{
 }
 
 .message__flash{
+  position: fixed;
+  top: 40px;
+  z-index: 10;
   font-size: .85rem;
   opacity:0;
   font-size: 1rem;
