--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height:calc(100 * var(--vh));
 }
