add pagination to ajax call

--- a/src/index.css
+++ b/src/index.css
@@ -378,6 +378,8 @@ svg.dropdown__icon path{
 .message__flash{
   position: fixed;
   top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   width:80%;
   z-index: 10;
   font-size: .85rem;
@@ -398,6 +400,10 @@ svg.dropdown__icon path{
   -moz-transition: opacity .75s ease,background-color .75s ease;
   -ms-transition: opacity .75s ease,background-color .75s ease;
   -o-transition: opacity .75s ease,background-color .75s ease;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
 }
 
 .message__flash-done{
