--- a/src/index.css
+++ b/src/index.css
@@ -369,13 +369,14 @@ svg.dropdown__icon path{
 /* filters */
 .filter__container{
   position: absolute;
-  top: 5%;
+  top: 4%;
   right:9%;
   width: 80%;
   color:var(--black);
   cursor: pointer;
   height: 4vh;
   width: 4vh;
+  z-index: 1;
 }
 
 .filter__container svg{
